--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#B71C1C</color>
     <color name="colorAccent">#F50057</color>
     <color name="colorblack">#424242</color>
+    <color name="colorprima">#7B40BB</color>
 </resources>
